# CaiFish

./: .gitmodules  README.md
c_backend/: .clangd  .gitignore  CMakeLists.txt  cmake_install.cmake
c_backend/include/: CleanupShadows.h  ConfigParams.h  VideoProcess.h  VideoShadowRemove.h  base64.h
c_backend/src/: ChromacityShadowDet.cpp  CleanupShadows.cpp  ConfigParams.cpp  Main.cpp  ShadowRemover.cpp  VideoProcess.cpp
forepage/: .gitignore  index.html  package.json
forepage/css/: index.css
forepage/src/: index.js
